--- a/Data_Analytics_MT_Python_Port_List.ipynb
+++ b/Data_Analytics_MT_Python_Port_List.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlE+chws6mhRLKzBCmzUI/",
+      "authorship_tag": "ABX9TyMJAWdMjSJh93q6/aaYqR6t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Data Analytics MT Python Port List**\n",
+        "# Data Analytics MT Python Port List\n",
         "\n",
         "---\n",
         "\n"
@@ -41,7 +41,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Oh no! our vessel MT Python's auxiliary engine has failed! The vessel is currently with power in the English Channel. Authorities have said we must divert asap to any port that could conduct emergency repairs. \n"
+        "## Problem Summary"
+      ],
+      "metadata": {
+        "id": "DsGyT34E05E8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Oh no! our vessel MT Python's auxiliary engine has failed! The vessel is currently with power in the English Channel. Authorities have said we must divert asap to any port that could conduct emergency repairs.\n"
       ],
       "metadata": {
         "id": "S77YK1jMnm6X"
@@ -50,12 +59,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After receiving a [list of ports](https://www.kaggle.com/datasets/sanjeetsinghnaik/ship-ports) worldwide from our management, we will need to narrow down the possibilities. \n",
+        "After receiving a [list of ports](https://www.kaggle.com/datasets/sanjeetsinghnaik/ship-ports) worldwide from our management, we will need to narrow down the possibilities.\n",
         "\n",
-        "The port list was loaded into Google Big Query in order to drill down the options via SQL. The criteria was as follows:\n",
-        "\n",
-        "1.   Provide a list of 10 ports nearby the English Channel \n",
-        "2.   Arrange via port size so we can assess which port might have space \n",
         "\n"
       ],
       "metadata": {
@@ -64,9 +69,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Data Analysis"
+      ],
       "metadata": {
-        "id": "MDnnk2bUprVL"
+        "id": "RrAPqWeE1NIr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The port list was loaded into Google Big Query in order to drill down the options via SQL. The criteria was as follows:\n",
+        "\n",
+        "Provide a list of 10 ports nearby the English Channel\n",
+        "Arrange via port size so we can assess which port might have space"
+      ],
+      "metadata": {
+        "id": "JWbbUrLs1Idm"
       }
     },
     {
@@ -85,6 +104,15 @@
       ],
       "metadata": {
         "id": "yiaWrQ_AoNGQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Visualisation"
+      ],
+      "metadata": {
+        "id": "rnL7wvWo1TNK"
       }
     },
     {
